# aws-lambda-rust-runtime

./: CONTRIBUTING.md  Cargo.toml  Makefile  README.md  release-plz.toml
.github/workflows/: build-events.yml  build-extension.yml  build-integration-test.yml  build-runtime.yml  check-docs.yml  check-examples.yml  closed-issue-message.yml  format.yml  release-plz.yml  run-integration-test.yml  test-rie.yml
examples/basic-lambda-concurrent/: Cargo.toml
examples/basic-sdk/: README.md
examples/basic-tenant-id/: Cargo.toml  README.md
examples/basic-tenant-id/src/: main.rs
examples/extension-logs-kinesis-firehose/: Cargo.toml
examples/http-dynamodb/: Cargo.toml
lambda-events/: Cargo.toml  README.md
lambda-events/lambda-events-examples/: Cargo.toml
lambda-events/lambda-events-examples/examples/: comprehensive-builders.rs  lambda-runtime-authorizer-builder.rs  lambda-runtime-sqs-batch-builder.rs
lambda-events/src/: time_window.rs
lambda-extension/: Cargo.toml  README.md
lambda-http/: Cargo.toml  README.md
lambda-http/src/: lib.rs  request.rs  response.rs  streaming.rs
lambda-integration-tests/: Cargo.toml  samconfig.toml  template.yaml
lambda-integration-tests/src/: authorizer.rs  helloworld.rs  tenant_id_test.rs
lambda-integration-tests/tests/: tenant_id_prod_test.rs
lambda-runtime/: Cargo.toml
lambda-runtime-api-client/: Cargo.toml  README.md
lambda-runtime-api-client/src/: lib.rs
lambda-runtime/src/: lib.rs  requests.rs  runtime.rs  types.rs
lambda-runtime/tests/: tenant_id_integration.rs
scripts/: test-rie.sh
(+93 files in other folders)
